Sobrescreve método equals() de Documentos Fiscais